Skills added to projects

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                     development opportunities. This journey has culminated in the successful completion of a 12-week
                     bootcamp, elevating my skills to a professional level.</p>
 
-                <p>Eager to contribute to a dynamic and innovative company, I'm actively seeking a junior role to put my expertise into practice.</p>
+                <p>Eager to contribute to a dynamic and innovative company, I'm actively seeking a junior role to put my
+                    expertise into practice.</p>
             </div>
         </section>
 
@@ -117,8 +118,9 @@
                             alt="screenshot of calculator app" /></a>
                     <h4>Calculator</h4>
                     <p>
-                        Provides the basic functionality of a calculator through a simple UI. Users can input numbers,
-                        perform basic operations, and see the results on the display.
+                        Provides the basic functionality of a calculator through a simple UI.
+                        <br><br><br>
+                        Skills: HTML, CSS, JavaScript
                     </p>
                     <p>&nbsp;</p>
                     <p><a href="https://github.com/Lolisolera/portfolio/tree/main/calculator" target="_blank"><i
@@ -129,8 +131,9 @@
                             alt="screenshot of Simon game" /></a>
                     <h4>Simon game</h4>
                     <p>
-                        Combines event handling, game logic, and UI animations. Players need to repeat the
-                        computer-generated color sequence to advanced levels.
+                        Combines event handling, game logic, and UI animations.
+                        <br> <br><br><br>
+                        Skills: HTML, CSS, JavaScript
                     </p>
                     <p>&nbsp;</p>
                     <p><a href="https://github.com/Lolisolera/portfolio/tree/main/simon-game" target="_blank"><i
@@ -141,8 +144,10 @@
                             alt="screenshot of dice game" /></a>
                     <h4>Dice game</h4>
                     <p>
-                        Simulates a simple two-player dice game where each player rolls a die, and the player with the
-                        higher number wins. The result is shown at the top.
+                        Simulates a simple two-player dice game where each player rolls a dice, and the player with the
+                        higher number wins.
+                        <br><br>
+                        Skills: HTML, CSS, JavaScript
                     </p>
                     <p>&nbsp;</p>
                     <p><a href="https://github.com/Lolisolera/portfolio/tree/main/dice-game" target="_blank"><i
@@ -155,6 +160,8 @@
                     <p>
                         A virtual drum kit where users can either click on drum buttons or press corresponding keys to
                         produce drum sounds and visual animations.
+                        <br>
+                        Skills: HTML, CSS, JavaScript
                     </p>
                     <p>&nbsp;</p>
                     <p><a href="https://github.com/Lolisolera/portfolio/tree/main/drum-kit" target="_blank"><i
@@ -166,7 +173,9 @@
                     <h4>TinDog website</h4>
                     <p>
                         A webpage for a fictional app called TinDog. This is a creative project that mimics a dating app
-                        but for dogs. It blends humour with modern design elements.
+                        but for dogs.
+                        <br><br>
+                        Skills: HTML, CSS, Bootstrap
                     </p>
                     <p>&nbsp;</p>
                     <p><a href="https://github.com/Lolisolera/portfolio/tree/main/tindog-website" target="_blank"><i
@@ -177,8 +186,10 @@
                             alt="screenshot of Alien101 website" /></a>
                     <h4>Alien101 website</h4>
                     <p>
-                        A website showcasing my work as a visual artist. Built with Wordpress, it includes
-                        profile information and some of the videos and stills from past gigs.
+                        A website showcasing my work as a visual artist. It includes
+                        profile information and some of the videos and stills.
+                        <br><br>
+                        Skills: WordPress
                     </p>
                 </div>
                 <div class="tile">
@@ -188,6 +199,8 @@
                     <p>
                         This Python app features various functions including the ability to view, add, update, and
                         delete songs, along with report retrieval.
+                        <br><br>
+                        Skills: Python, MySQL
                     </p>
                 </div>
                 <div class="tile">
@@ -197,6 +210,8 @@
                     <p>
                         A Python application to manipulate the FilmFlix database. Users can add, delete, amend and print
                         any film records they wish.
+                        <br><br>
+                        Skills: Python, MySQL
                     </p>
                 </div>
                 <div class="tile">
@@ -206,6 +221,8 @@
                     <p>
                         I wrote this application in Python. It enables users to add, delete, update and print cooking
                         recipes. There is also an option to view a report.
+                        <br><br>
+                        Skills: Python, MySQL
                     </p>
                 </div>
             </div>
