--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                             src="images/music-app.png" alt="screenshot of songs app" /></a>
                     <h4>Songs App</h4>
                     <p>
-                        This Python app features various functions including the ability to view, add, update, and
+                        This app features various functions including the ability to view, add, update, and
                         delete songs, along with report retrieval.
                         <br><br>
                         Skills: Python, MySQL
@@ -211,7 +211,7 @@
                             src="images/film.png" alt="screenshot of filmflix app" /></a>
                     <h4>FilmFlix App</h4>
                     <p>
-                        A Python application to manipulate the FilmFlix database. Users can add, delete, amend and print
+                        An app to manipulate the FilmFlix database. Users can add, delete, amend and print
                         any film records they wish.
                         <br><br>
                         Skills: Python, MySQL
@@ -222,7 +222,7 @@
                             src="images/recipe-book.png" alt="screenshot of recipe book app" /></a>
                     <h4>Recipe Book App</h4>
                     <p>
-                        I wrote this application in Python. It enables users to add, delete, update and print cooking
+                        This app enables users to add, delete, update and print cooking
                         recipes. There is also an option to view a report.
                         <br><br>
                         Skills: Python, MySQL
