--- a/index.html
+++ b/index.html
@@ -114,6 +114,17 @@
             <h3 class="section-heading">PROJECTS</h3>
             <div class="sec-content-div flexible">
                 <div class="tile">
+                    <a href="https://replit.com/@lolisolera101/Filmflix-Project?v=1" target="_blank"><img
+                            src="images/film.png" alt="screenshot of filmflix app" /></a>
+                    <h4>My Movies App</h4>
+                    <p>
+                        An app to manipulate a "movies" database. Users can add, delete, amend and print
+                        any movies records they wish using the web interface.
+                        <br><br>
+                        Skills: Python, Flask, SQLAlchemy, API
+                    </p>
+                </div>
+                <div class="tile">
                     <a href="calculator/index.html" target="_blank"><img src="images/calculator.png"
                             alt="screenshot of calculator app" /></a>
                     <h4>Calculator</h4>
@@ -206,17 +217,7 @@
                         Skills: Python, MySQL
                     </p>
                 </div>
-                <div class="tile">
-                    <a href="https://replit.com/@lolisolera101/Filmflix-Project?v=1" target="_blank"><img
-                            src="images/film.png" alt="screenshot of filmflix app" /></a>
-                    <h4>FilmFlix App</h4>
-                    <p>
-                        An app to manipulate the FilmFlix database. Users can add, delete, amend and print
-                        any film records they wish.
-                        <br><br>
-                        Skills: Python, MySQL
-                    </p>
-                </div>
+
                 <div class="tile">
                     <a href="https://replit.com/@lolisolera101/Recipe-Book-App?v=1" target="_blank"><img
                             src="images/recipe-book.png" alt="screenshot of recipe book app" /></a>
