--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
             <h3 class="section-heading">PROJECTS</h3>
             <div class="sec-content-div flexible">
                 <div class="tile">
-                    <a href="https://replit.com/@lolisolera101/Filmflix-Project?v=1" target="_blank"><img
-                            src="images/film.png" alt="screenshot of filmflix app" /></a>
+                    <a href="https://mymoviesapp.co.uk/" target="_blank"><img src="images/film.png"
+                            alt="screenshot of filmflix app" /></a>
                     <h4>My Movies App</h4>
                     <p>
                         An app to manipulate a "movies" database. Users can add, delete, amend and print
