--- a/index.html
+++ b/index.html
@@ -118,11 +118,14 @@
                             alt="screenshot of filmflix app" /></a>
                     <h4>My Movies App</h4>
                     <p>
-                        An app to manipulate a "movies" database. Users can add, delete, amend and print
-                        any movies records they wish using the web interface.
+                        An API- based app for managing a "movies" database where users can add, delete, edit, and print
+                        records via a web interface.
                         <br><br>
-                        Skills: Python, Flask, SQLAlchemy, API
+                        Skills: Python, Flask, SQLAlchemy
                     </p>
+                    <p>&nbsp;</p>
+                    <p><a href="https://github.com/Lolisolera/My-Movies-App" target="_blank"><i
+                                class="fa-brands fa-github fa-xl"></i></a></p>
                 </div>
                 <div class="tile">
                     <a href="calculator/index.html" target="_blank"><img src="images/calculator.png"
