--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
                     movies and performing visuals live using cutting-edge software.</p>
 
                 <p>Fueled by my enthusiasm for combining creativity with technology, I've been pursuing software
-                    development opportunities. This journey has culminated in the successful completion of a 12-week
-                    bootcamp, elevating my skills to a professional level.</p>
+                    development opportunities. This journey has led me to complete two comprehensive bootcamps: the
+                    first with Just IT, funded by the government, which refined my professional skills, and the most
+                    recent with Udemy, where I advanced my expertise and broadened my technical knowledge..</p>
 
                 <p>Eager to contribute to a dynamic and innovative company, I'm actively seeking a junior role to put my
                     expertise into practice.</p>
